--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/index.js",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
